Fixed gui overflow with orbit controls when is closed in component_3d

--- a/core/component_3d/css/component_3d.less
+++ b/core/component_3d/css/component_3d.less
@@ -51,9 +51,9 @@
 				right: 0;
 				bottom: 0;
 				overflow: auto;
+				max-height: 100%;
+				height: fit-content;
 			}
-
-
 
 			// posterframe
 			.posterframe {
